--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
   * New debian/patches/0715-20-sane.hwdb_multi-arch.patch:
     - Remove buildtime from 20-sane.hwdb to make the file multi-arch ready
       (Closes: #880391)
+  * debian/libsane1.README.Debian: 
+    - Replace ConsoleKit with ConsoleKit/systemd-logind (Closes: #872364).
  
  -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
 
