Add libsnmp-dev to Build-Depends to enable SNMP support

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
       (Closes: #880391)
   * debian/libsane1.README.Debian:
     - Replace ConsoleKit with ConsoleKit/systemd-logind (Closes: #872364).
+  * debian/control:
+    - Add libsnmp-dev to Build-Depends to enable SNMP support.
 
  -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
 
