--- a/debian/changelog
+++ b/debian/changelog
@@ -2,11 +2,11 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
 
   * Change to my new email address.
   * debian/rules:
-    - Add override_dh_autoreconf to prevend delete of libtool.m4
+    - Add override_dh_autoreconf to prevent delete of libtool.m4
       (Closes: #887032).
     - Remove outdated configure parameter --enable-translations.
-    - Add configure parameter --enable-parport-directio for better parport
-      handling.
+    - Add configure parameter --enable-parport-directio for better parallel
+      port handling.
     - Rename configure parameter --with-docdir to --docdir.
     - Move backend-writing.txt from new directory.
   * debian/copyright:
