--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
+sane-backends (1.0.27-1~experimental4) experimental; urgency=medium
 
   * Change to my new email address.
   * debian/rules:
@@ -26,7 +26,7 @@ sane-backends (1.0.27-1~experimental4) UNRELEASED; urgency=medium
   * debian/control:
     - Add libsnmp-dev to Build-Depends to enable SNMP support.
 
- -- Jörg Frings-Fürst <debian@jff.email>  Sun, 12 Nov 2017 13:59:10 +0100
+ -- Jörg Frings-Fürst <debian@jff.email>  Mon, 02 Apr 2018 14:29:43 +0200
 
 sane-backends (1.0.27-1~experimental3) experimental; urgency=medium
 
